# bank2ai

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: azure-static-web-apps.yml
demo/: README.md  server.py  test_schema_sync.py
demo/adapters/: __init__.py  models.py
demo/adapters/demo/: README.md
demo/adapters/meniga/: __init__.py  adapter.py
docs/: .gitignore  DEPLOYMENT.md  README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/docs/enterprise/: advisory-agents.md  chat-agent.md  contact.md  mcp-server.md  overview.md  sdk.md
docs/docs/getting-started/: concepts.md  installation.md  quickstart.md  quickstart.mdx  welcome.md
docs/docs/guides/: add-a-new-bank.md  build-a-skill.md  connect-claude.md  run-the-demo.md  wrap-a-real-bank.md
docs/docs/marketplace/: installing.md  overview.md  publishing-a-server.md  publishing-a-skill.md
docs/docs/resources/: changelog.md  contributing.md  migrating-from-0.10.md  roadmap.md
docs/scripts/: sync-changelog.mjs  sync-spec.mjs
docs/src/css/: custom.css
docs/src/pages/: index.module.css  index.tsx
docs/static/: robots.txt  staticwebapp.config.json
examples/demo/: README.md  pyproject.toml
examples/demo/src/bank2ai_demo/: __init__.py  __main__.py  client.py  data.py  server.py
examples/demo/tests/: test_output_schema_modes.py  test_schema_sync.py
examples/meniga/: .env.example  README.md  pyproject.toml
examples/meniga/src/bank2ai_meniga/: __init__.py  __main__.py  server.py
scripts/: generate_spec.py
server/: .gitignore  README.md  bank2ai_mcp.py  client.py  demo_data.py  demo_server.py  meniga_server.py  pyproject.toml  requirements.txt  server.py  test_schema_sync.py
server/adapters/: base.py
server/adapters/demo/: README.md  __init__.py  adapter.py
server/adapters/meniga/: adapter.py
server/schemas/: account.json  category.json  recipient.json  transaction.json
specs/: README.md  bank2ai.json  bank2ai.spec.md
src/bank2ai/: __init__.py  mcp.py  models.py  tools.py
src/bank2ai/models/: __init__.py  accounts.py  base.py  categories.py  identity.py  recipients.py  transactions.py  transfers.py
src/bank2ai/tools/: __init__.py  accounts.py  base.py  categories.py  discovery.py  recipients.py  register.py  transactions.py  transfers.py
