[project]
name = "bank2ai-server"
version = "0.1.0"
description = "Reference Bank2AI MCP server with a pluggable bank adapter"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.27.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "fastmcp>=3.2.4",
]

[dependency-groups]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[tool.uv]
package = false
