[project]
name = "bank2ai-demo"
version = "0.1.0"
description = "Bank2AI demo MCP server backed by hardcoded data"
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "bank2ai",
    "python-dotenv>=1.0.0",
]

[project.scripts]
bank2ai-demo = "bank2ai_demo.server:main_sync"

[dependency-groups]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bank2ai_demo"]

[tool.uv.sources]
bank2ai = { workspace = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
