[project]
name = "bank2ai-meniga"
version = "0.1.0"
description = "Bank2AI MCP server backed by Meniga APIs"
readme = "README.md"
license = { file = "../../LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "bank2ai",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
bank2ai-meniga = "bank2ai_meniga.server:main_sync"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bank2ai_meniga"]

[tool.uv.sources]
bank2ai = { workspace = true }
